--- a/theme/css/breaks/mobile.css
+++ b/theme/css/breaks/mobile.css
@@ -4,12 +4,15 @@ footer {
     font-size: 1em;
 }
 
-header .region-branding,
 header #block-hauptnavigation,
 #main .region-content,
 footer .region-footer {
     width: 90%;
     margin: 0 5%;
+}
+
+header .region-branding {
+   margin: 0;
 }
 
 .btn-like {
@@ -25,19 +28,30 @@ header .region-branding {
     display: unset;
 }
 
+/* 12.16vw = height of .site-logo */
 header .site-name {
     float: none;
-    text-align: center;
-    margin: 3vw 0;
+    margin: 0;
+    margin-top: -12.16vw;
+    margin-bottom: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 12.16vw;
 }
 
 header .site-name a {
     font-size: 3.2vw;
+    transform: translateY(1.5vw);
+}
+
+.site-logo {
+    display: block;
+    line-height: 0;
 }
 
 .site-logo img {
-    position: absolute;
-    margin: -4vw 0;
     width: 18vw;
     margin-left: 3%;
 }
@@ -50,12 +64,23 @@ header .site-logo img {
     display: none;
 }
 
-#superfish-main-toggle {
+/* 12.16vw = height of .site-logo */
+.sf-accordion-toggle {
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 12.16vw;
+    margin-top: calc(-12.16vw - 1em);
+    margin-left: 83%;
+}
+
+#superfish-main-toggle {
+    display: block;
     text-align: right;
-    width: 7%;
+    width: 7vw;
     height: 7vw;
-    margin: -12.4vw 0 0 83%;
+    margin: 0;
     background-image: url("../../assets/menuicon.svg");
     background-size: contain;
     background-repeat: no-repeat;
@@ -118,12 +143,20 @@ header .site-logo img {
     text-align: center;
 }
 
+.field--name-body p {
+    text-align: justify;
+}
+
 .aside-container {
     display: unset;
 }
 
 .aside-container aside {
     margin: 10vw 0 0 0;
+}
+
+.field--name-body aside p {
+    text-align: unset;
 }
 
 /* Ansichten */
